# ARMinor-2020-Autonomous-Toilet-Cleaner

./: README.md  get_coordinates.py  toilet_octomap.bt
QRCodesCodes/: CODEDUMP.py  RosNode.py  qrCodeGenerator.py  qrDetection.py  qrDetectionOLD.py
catkin_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/src/: arm_planning.py
navigation/: CMakeLists.txt  package.xml
navigation/launch/: navigation.launch
navigation/src/: navigation.py
octomap_server/: toilet_octomap_detail.bt
octomap_server/launch/: octomap_mapping.launch
overview/: CMakeLists.txt  package.xml
overview/launch/: overview.launch
overview/src/: overview.py
qr_localizer/: CMakeLists.txt  package.xml
qr_localizer/launch/: calibrate.launch  qr_localizer.launch  toiletcleaner.launch
qr_localizer/src/: CalibrationFile.npz  CalibrationFileNick.npz  RosCalibrationFile.npz  RosCapture.py  RosNode.py  calibration.py  qrCodeGenerator.py  qrDetection.py
tcmoveit/: CMakeLists.txt
tcmoveit/config/: joint_limits.yaml  stomp_planning.yaml
tcmoveit/launch/: laser_geometry.launch  move_group.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  tc.launch
tcmoveit/src/: bag_publisher_maintain_time.cpp  cylinder_segment.cpp  move_arm.cpp
tcnav/cfg/: costmap_common_params.yaml  teb_local_planner_params.yaml
tcnav/launch/: teb.launch
tcnav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml
(+1292 files in other folders)
