<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.1</version>
  <description>The navigation package</description>

  <maintainer email="nick.dubbeldam@live.nl">Nick Dubbeldam</maintainer>

  <license>MIT</license>

  <author email="nick.dubbeldam@live.nl">Nick Dubbeldam</author> 


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>toiletcleaner</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>toiletcleaner</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>toiletcleaner</exec_depend>


  <export>

  </export>
</package>
